feat(build): JDK21 support