@@ -26,7 +26,6 @@ object FiloSettings {
       "-deprecation",
       "-encoding", "UTF-8",
       "-unchecked",
-      "-release:11",
       "-feature",
       "-Wconf:cat=deprecation:w", // Scala 2.13 replacement for -deprecation; report deprecations as warnings
       "-Ywarn-dead-code",
@@ -38,7 +37,7 @@ object FiloSettings {
 
     javacOptions ++= Seq(
       "-encoding", "UTF-8",
-      "--release", "11"
+      "--release", "21"  // Target JDK 21
     ))
 
   // Create a default Scala style task to run with tests
@@ -95,6 +94,28 @@ object FiloSettings {
       evictionSettings ++
       consoleSettings
 
+  // JDK 21 module system opens required for Kryo serialization and other internal Java class access
+  lazy val jdk21ModuleOpens = List(
+    "--add-opens=java.base/java.util=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+    "--add-opens=java.base/java.io=ALL-UNNAMED",
+    "--add-opens=java.base/java.net=ALL-UNNAMED",
+    "--add-opens=java.base/java.nio=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+    "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+    "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+    "--add-opens=java.base/java.math=ALL-UNNAMED",
+    "--add-opens=java.base/java.text=ALL-UNNAMED",
+    "--add-opens=java.base/java.time=ALL-UNNAMED",
+    "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED",
+    "-Djdk.reflect.useDirectMethodHandle=false"
+  )
+
   lazy val testSettings = Seq(
     parallelExecution in Test := false,
     fork in Test := true,
@@ -102,7 +123,7 @@ object FiloSettings {
     // Uncomment below to debug Typesafe Config file loading
     // javaOptions ++= List("-Xmx2G", "-Dconfig.trace=loads"),
     // Make Akka tests more resilient esp for CI/CD/Travis/etc.
-    javaOptions ++= List("-Xmx2G", "-XX:+CMSClassUnloadingEnabled", "-Dakka.test.timefactor=3"),
+    javaOptions ++= List("-Xmx2G", "-Dakka.test.timefactor=3") ++ jdk21ModuleOpens,
     // Needed to avoid cryptic EOFException crashes in forked tests
     // in Travis with `sudo: false`.
     // See https://github.com/sbt/sbt/issues/653
@@ -226,14 +247,13 @@ object FiloSettings {
   )
 
   lazy val assemblyExcludeScala = assemblySettings ++ Seq(
-    assemblyOption in assembly := (assemblyOption in assembly).value.copy(includeScala = false))
+    assembly / assemblyOption ~= { _.withIncludeScala(false) })
 
-  // Builds cli as a standalone executable to make it easier to launch commands
   lazy val cliAssemblySettings = assemblySettings ++ Seq(
-    assemblyOption in assembly := (assemblyOption in assembly).value.copy(
-      prependShellScript = Some(shellScript)),
-    assemblyJarName in assembly := s"filo-cli-${version.value}"
+    assembly / assemblyOption ~= { _.withPrependShellScript(shellScript) },
+    assembly / assemblyJarName := s"filo-cli-${version.value}"
   )
+
 
   // builds timeseries-gen as a fat jar so it can be executed for development test scenarios
   lazy val gatewayAssemblySettings = assemblySettings ++ Seq(
